<resources>
    <!-- App settings -->
    <string name="app_name">ProGram</string>

    <!-- Splash settings -->
    <string name="splash_app_description">Welcome to PROGRAM,\nA farmer\'s friend in every aspect.</string>
    <string name="next">Next</string>
    <string name="splash_continue">Continue</string>
    <string name="base_about_title">ProGram - A Farmers Friend</string>

    <!-- Navigation drawer settings -->
    <string name="nav_tutorials">Tutorials</string>
    <string name="nav_help">Help</string>
    <string name="nav_about">About</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Toolbar settings -->
    <string name="toolbar_text_home">Home</string>
    <string name="toolbar_text_forum">Forum</string>
    <string name="toolbar_text_calendar">Calendar</string>
    <string name="toolbar_about">About</string>
    <string name="toolbar_help">Help</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_text_schemes">Schemes</string>
    <string name="toolbar_text_ask_question">Ask Question</string>
    <string name="toolbar_text_question">Question</string>
    <string name="toolbar_text_awards">Awards</string>
    <string name="toolbar_text_spotlight">Spotlight</string>
    <string name="toolbar_login">Login</string>
    <string name="toolbar_jobs">Jobs</string>
    <string name="toolbar_learn">Learn</string>
    <string name="toolbar_choose_state">Choose a State</string>
    <string name="toolbar_choose_crop">Choose a Crop</string>
    <string name="toolbar_soil_test_detail">Enter soil test report details</string>

    <!-- Home -->
    <string name="home_calendar">Calendar</string>
    <string name="home_forum">Forum</string>
    <string name="home_weather">Weather</string>
    <string name="home_market">Market</string>

    <!-- Forum -->
    <string name="forum_learn">Learn</string>
    <string name="forum_questionAnswer">Q&amp;A</string>
    <string name="forum_schemes">Schemes</string>
    <string name="forum_jobs">Jobs</string>
    <string name="forum_spotlight">Spotlight</string>
    <string name="forum_awards">Awards</string>

    <!-- Dialog settings -->
    <string name="dialog_please_wait">Please wait…</string>

    <!-- Useless -->
    <string name="exampleString">Example</string>
    <string name="expand"><![CDATA[>]]></string>

    <!-- Question Post Settings -->
    <string name="question_title">Title (question)</string>
    <string name="question_description">Description</string>
    <string name="question_post">Post</string>

    <!-- Login settings -->
    <string name="login_password">Password</string>
    <string name="login_id">Mobile</string>
    <string name="login_login">Login</string>
    <string name="login_sign_up">Don\'t have a account?</string>

    <!-- Sign Up settings -->
    <string name="sign_up_mobile">Mobile</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_state">State</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_sign_up">Sign Up</string>
    <string name="sign_up_category">Category</string>
    <string name="sign_up_gender">Gender</string>
    <string name="sign_up_age">Age</string>
    <string name="sign_up_login">Do you have an account?</string>
    <string-array name="sign_up_category">
        <item>Farmer</item>
        <item>Researcher</item>
        <item>Student</item>
    </string-array>
    <string-array name="sign_up_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- Language selector settings -->
    <string name="language_lang">Language</string>
    <string name="language_description">Understand better by \nSelecting your favourite Language</string>
    <string-array name="app_language">
        <item>Hindi</item>
        <item>English</item>
    </string-array>
    <string-array name="app_language_alias">
        <item>hi</item>
        <item>en</item>
    </string-array>



    <!-- Tutorial Settings -->
    <string name="tutorial_title_learn">Learn</string>
    <string name="tutorial_title_SelectCrop">Get Best Crop</string>
    <string name="tutorial_title_Calender">Calender</string>
    <string name="tutorial_title_QuestionAndAnswers">Question And Answers</string>
    <string name="tutorial_title_SchemesAndAwards">Schemes And Awards</string>
    <string name="tutorial_title_employment">Employment</string>

    <string name="tutorial_description_learn">Here you can find all you need to know about Organic Farming and the IDEAL farming practices</string>
    <string name="tutorial_description_SelectCrop">Select a crops based on your soil, every soil favours a different crop, go check out what you should grow. Enter your soil parameters and you will get your answer.</string>
    <string name="tutorial_description_Calender">Calendar provides timely notifications prior to the time of performing the next farming step according to the farming cycle of the crop selected.</string>
    <string name="tutorial_description_QuestionAndAnswers">Read what problems are being faced by other farmers, if you have enough knowledge help them out, if you have problems ask your own questions and someone else might help you.</string>
    <string name="tutorial_description_SchemesAndAwards">Here you can get all the information related to schemes and awards issued by government for farmers</string>
    <string name="tutorial_description_employment">Don\'t know what to do in off season, check out the jobs section and you might find some work to do</string>

    <string name="tutorial_next">NEXT</string>

    <!-- crop settings -->
    <string name="crop_prompt">Choose a Crop</string>
    <string-array name="india_crops">
        <item>wheat</item>
        <item>rice</item>
        <item>maize</item>
        <item>soyabean</item>
        <item>cotton</item>
        <item>bajra</item>
        <item>jowar</item>
        <item>sunflower</item>
        <item>sugarcane</item>
        <item>jute</item>
        <item>tea</item>
        <item>coffee</item>
        <item>rubber</item>
        <item>silk</item>
        <item>tobacco</item>
    </string-array>

    <!-- crop image settings -->
    <integer-array name="Crops_image">
        <item>@drawable/crops</item>
    </integer-array>

    <!-- location settings -->
    <string name="toolbar_text_enter_location">Choose a Location</string>
    <string-array name="location_list">
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhatisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha(Orissa)</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>

    <!-- location image settings -->
    <integer-array name="Location_image">
        <item>@drawable/location</item>
    </integer-array>

    <!-- month settings -->
    <string name="calendar_enter_month">Choose a Month</string>
    <string-array name="Month_List">
      <item>January</item>
      <item>February</item>
      <item>March</item>
      <item>April</item>
      <item>May</item>
      <item>June</item>
      <item>July</item>
      <item>August</item>
      <item>September</item>
      <item>October</item>
      <item>November</item>
      <item>December</item>
    </string-array>

    <!-- month image settings -->
    <integer-array name="Month_image">
        <item>@drawable/months</item>
    </integer-array>

    <!-- Calendar -->
    <string name="calendar_new_event">Add a new event</string>
    <string name="Notifications">Notifications</string>

    <!-- SCalendar -->
    <string name="scalendar_location_select_state">Select State</string>
    <string name="scalendar_fetch_state">Fetching current state.</string>
    <string name="scalendar_change_state">Change State</string>
    <string name="scalendar_continue">Continue</string>

    <!-- Calendar Events -->
    <string name="calendar_eventString">Click for event Description</string>
    <string name="calendar_event_dateString">Event Date</string>

    <!--Soil Parameters -->
    <string name="soilparameter_pH">pH Value</string>
    <string name="soilparameter_EC">Electical Conductivity</string>
    <string name="soilparameter_OC">Organic Carbon</string>
    <string name="soilparameter_N">Nitrogen</string>
    <string name="soilparameter_P">Phosphorus</string>
    <string name="soilparameter_K">Potassium</string>
    <string name="soilparameter_CU">Copper</string>
    <string name="soilparameter_ZN">Zinc</string>
    <string name="soilparameter_MN">Manganese</string>
    <string name="soilparameter_FE">Iron</string>
    <string name="soilparameter_S">Sulphur</string>
    <string name="soilparameter_search">SEARCH</string>

    <!-- Forum -->
    <string name="forum_learn_of_name">What is Organic Farming?</string>
    <string name="forum_post_category">Category</string>
    <string name="forum_post_detail_title">Introduction</string>
    <string name="forum_post_detail_description">Introduction here</string>

</resources>



