<?xml version="1.0" encoding="utf-8"?>
<app.widgets.ScrimInsetsScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:scrollbarSize="@dimen/keyLine3">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/keyLine1"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyLine2"
            android:background="@mipmap/ic_base_login_sign_up" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyLine2"
            android:gravity="center"
            android:text="@string/sign_up_sign_up"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryText" />

        <android.support.v7.internal.widget.TintEditText
            android:id="@+id/sign_up_name"
            android:inputType="textPersonName"
            android:hint="@string/sign_up_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/keyLine2"
            android:textColorHint="@color/colorCardText" />

        <android.support.v7.internal.widget.TintEditText
            android:id="@+id/sign_up_mobile"
            android:inputType="phone"
            android:maxLength="10"
            android:hint="@string/sign_up_mobile"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/keyLine1"
            android:textColorHint="@color/colorCardText" />

        <android.support.v7.internal.widget.TintEditText
            android:id="@+id/sign_up_password"
            android:inputType="textPassword"
            android:hint="@string/sign_up_password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/keyLine1"
            android:textColorHint="@color/colorCardText" />

        <android.support.v7.internal.widget.TintEditText
            android:id="@+id/sign_up_email"
            android:inputType="textEmailAddress"
            android:hint="@string/sign_up_email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/keyLine1"
            android:textColorHint="@color/colorCardText" />

        <android.support.v7.internal.widget.TintButton
            android:id="@+id/sign_up_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyLine1"
            android:background="@drawable/button_border_bottom"
            android:hint="@string/sign_up_state"
            android:textColorHint="@color/colorCardText"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:paddingLeft="8dp"
            android:gravity="start|center_vertical" />

        <android.support.v7.internal.widget.TintButton
            android:id="@+id/sign_up_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyLine1"
            android:background="@drawable/button_border_bottom"
            android:hint="@string/sign_up_category"
            android:textColorHint="@color/colorCardText"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:paddingLeft="16dp"
            android:gravity="start|center_vertical" />

        <android.support.v7.internal.widget.TintButton
            android:id="@+id/sign_up_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyLine1"
            android:background="@drawable/button_border_bottom"
            android:hint="@string/sign_up_gender"
            android:textColorHint="@color/colorCardText"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:paddingLeft="16dp"
            android:gravity="start|center_vertical" />

        <android.support.v7.internal.widget.TintEditText
            android:id="@+id/sign_up_age"
            android:inputType="number"
            android:hint="@string/sign_up_age"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/keyLine1"
            android:textColorHint="@color/colorCardText" />

        <android.support.v7.internal.widget.TintButton
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/keyLine2"
            android:textColor="@color/colorWhite"
            android:text="@string/sign_up_sign_up" />

        <TextView
            android:id="@+id/sign_up_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyLine2"
            android:layout_marginBottom="@dimen/keyLine2"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/sign_up_login" />

    </LinearLayout>

</app.widgets.ScrimInsetsScrollView>