<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/keyLine1">

    <android.support.v7.internal.widget.TintEditText
        android:id="@+id/questionTitle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/keyLine1"
        android:hint="@string/question_title"
        android:textColorHint="@color/colorCardText" />

    <android.support.v7.internal.widget.TintEditText
        android:id="@+id/questionDescription"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/keyLine1"
        android:hint="@string/question_description"
        android:textColorHint="@color/colorCardText"
        android:inputType="textMultiLine"
        android:ems="10" />

    <Button
        android:id="@+id/questionPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginTop="@dimen/keyLine1"
        android:text="@string/question_post" />

</LinearLayout>