<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="16dp"
            android:id="@+id/soilparameter1"
            android:weightSum="1"
            android:orientation="vertical">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Enter the values according to your soil test report"
                    android:layout_column="1"
                    android:layout_weight="0.75" />


            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soilparameter_pH"
                    android:layout_column="1"
                    android:layout_weight="0.25" />

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:width="100px"
                    android:layout_column="4"
                    android:id="@+id/ph"
                    android:inputType="number"/>


            </TableRow>


            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soilparameter_EC"
                    android:layout_column="1"
                    android:layout_weight="0.25" />

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:width="100px"
                    android:hint="(in dS/m) "
                    android:layout_column="4"
                    android:id="@+id/ec"
                    android:inputType="number"/>

            </TableRow>


            <TableRow>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:text="@string/soilparameter_OC"
                    android:layout_column="1"
                    android:layout_weight="0.25" />

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:width="100px"
                    android:hint="(in g/Kg)"
                    android:layout_column="4"
                    android:id="@+id/oc"
                    android:inputType="number"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soilparameter_N"
                    android:layout_column="1"
                    android:layout_weight="0.25" />

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:width="100px"
                    android:hint="(in kg/ha)"
                    android:layout_column="4"
                    android:id="@+id/n"
                    android:inputType="number"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soilparameter_P"
                    android:layout_column="1"
                    android:layout_weight="0.25" />

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:width="100px"
                    android:hint="(in kg/ha) "
                    android:layout_column="4"
                    android:id="@+id/p"
                    android:inputType="number"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:text="@string/soilparameter_K"
                    android:layout_column="1"
                    android:layout_weight="0.25" />

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:width="100px"
                    android:hint="(in kg/ha)"
                    android:layout_column="4"
                    android:id="@+id/k"
                    android:inputType="number"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soilparameter_ZN"
                    android:layout_column="1"
                    android:layout_weight="0.25" />

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:width="100px"
                    android:hint="(in mg/kg) "
                    android:layout_column="4"
                    android:id="@+id/zn"
                    android:inputType="number"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soilparameter_CU"
                    android:layout_column="1"
                    android:layout_weight="0.25" />

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:width="100px"
                    android:hint="(in mg/kg)"
                    android:layout_column="4"
                    android:id="@+id/cu"
                    android:inputType="number"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:text="@string/soilparameter_FE"
                    android:layout_column="1"
                    android:layout_weight="0.25" />

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:width="100px"
                    android:hint="(in mg/kg)"
                    android:layout_column="4"
                    android:id="@+id/fe"
                    android:inputType="number"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:text="@string/soilparameter_MN"
                    android:layout_column="1"
                    android:layout_weight="0.25" />

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:width="100px"
                    android:hint="(in mg/kg)"
                    android:layout_column="4"
                    android:id="@+id/mn"
                    android:inputType="number"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:text="@string/soilparameter_S"
                    android:layout_column="1"
                    android:layout_weight="0.25" />

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:width="100px"
                    android:hint="(in mg/kg)"
                    android:layout_column="4"
                    android:id="@+id/s"
                    android:inputType="number"/>

            </TableRow>

        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/jumpbtn4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:text="@string/soilparameter_search"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="jumpToPage" />
</RelativeLayout>