<?xml version="1.0" encoding="utf-8"?>
<app.widgets.ScrimInsetsScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:scrollbarSize="@dimen/keyLine3">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/keyLine1"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyLine2"
            android:background="@mipmap/login_image"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyLine2"
            android:textSize="@dimen/login_login"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/login_login"/>

        <android.support.v7.internal.widget.TintEditText
            android:id="@+id/login_id"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/keyLine2"
            android:hint="@string/login_id"
            android:textColorHint="@color/colorCardText" />

        <android.support.v7.internal.widget.TintEditText
            android:id="@+id/login_password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/keyLine1"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textColorHint="@color/colorCardText"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/keyLine2"
            android:textColor="@color/colorWhite"
            android:text="@string/login_login" />

        <TextView
            android:id="@+id/login_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyLine2"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/login_sign_up"/>

    </LinearLayout>

</app.widgets.ScrimInsetsScrollView>