<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/splash_background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/splash_background"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/keyLine3"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/splash_program_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/artwork"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/splash_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/splash_program_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/keyLine1"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/splash_app_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/splash_app_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/keyLine1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/splash_app_description"
            android:textColor="@color/colorWhite"
            android:gravity="center"/>

        <Button
            android:id="@+id/splash_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyLine4"
            android:layout_below="@+id/splash_app_description"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:text="@string/splash_continue"
            android:layout_gravity="center_horizontal|bottom" />

    </RelativeLayout>

</FrameLayout>