<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Basic">

        <app.widgets.MaterialListPreference
            android:key="language"
            android:title="@string/language_lang"
            android:summary="@string/language_description"
            android:entries="@array/app_language"
            android:entryValues="@array/app_language_alias"
            android:positiveButtonText="@string/next"/>

    </PreferenceCategory>
<!--
 <PreferenceCategory
     android:title="Dialog Category">

     <EditTextPreference
         android:key="edittext_preference"
         android:title="Edit text title"
         android:summary="Edit text Description"
         android:dialogTitle="Edit text title" />


     <ListPreference
         android:key="list_preference"
         android:title="List preference"
         android:summary="@string/summary_list_preference"
         android:entries="@array/entries_list_preference"
         android:entryValues="@array/entryvalues_list_preference"
         android:dialogTitle="@string/dialog_title_list_preference" />

</PreferenceCategory>

<PreferenceCategory
    android:title="@string/launch_preferences">

    <PreferenceScreen
        android:key="screen_preference"
        android:title="@string/title_screen_preference"
        android:summary="@string/summary_screen_preference">

        <CheckBoxPreference
            android:key="next_screen_checkbox_preference"
            android:title="@string/title_next_screen_toggle_preference"
            android:summary="@string/summary_next_screen_toggle_preference" />

    </PreferenceScreen>

    <PreferenceScreen
        android:title="@string/title_intent_preference"
        android:summary="@string/summary_intent_preference">

        <intent android:action="android.intent.action.VIEW"
            android:data="http://www.android.com" />

    </PreferenceScreen>

</PreferenceCategory>

<PreferenceCategory
    android:title="@string/preference_attributes">

    <CheckBoxPreference
        android:key="parent_checkbox_preference"
        android:title="@string/title_parent_preference"
        android:summary="@string/summary_parent_preference" />

     The visual style of a child is defined by this styled theme attribute.
    <CheckBoxPreference
        android:key="child_checkbox_preference"
        android:dependency="parent_checkbox_preference"
        android:layout="?android:attr/preferenceLayoutChild"
        android:title="@string/title_child_preference"
        android:summary="@string/summary_child_preference" />

</PreferenceCategory>
-->
</PreferenceScreen>